# 109416-term-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  constants.h  debug.h  example_input10.txt  example_output10.txt  generator.c  main.c  main_signal.c  main_signal.h  mingw-w64.cmake
chacha20/: chacha20.c  chacha20.h
console/: console.c  console.h  dialog.c  dialog.h  input.c  input.h  menu.c  menu.h  page.c  page.h
pages/: about_page.c  about_page.h  main_menu.c  main_menu.h  multi_game.c  multi_game.h  multi_game_result.c  multi_game_result.h  single_game.c  single_game.h  single_game_file.c  single_game_file.h  single_game_result.c  single_game_result.h
tests/: simple_console.c
util/: check_duplicate.h  generate_game_file_msg.h  generate_numbers.h  parse_string.c  parse_string.h  prize.h  split_whitespace.c  split_whitespace.h
